[metadata]
name = eptest
version = 0.1.1
author = Erin Turnbull
author_email = erin.a.turnbull@gmail.com
description = Test suite enhancement for testing plugins
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/turnbullerin/packtest
project_urls =
    Bug Tracker = https://github.com/turnbullerin/packtest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src